[gd_scene load_steps=4 format=2]

[ext_resource path="res://Asset/Spawner/Enemy/Buttercat/Buttercat.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Asset/Spawner/Enemy/Buttercat/Buttercat.gd" type="Script" id=3]
[ext_resource path="res://Asset/Spawner/Enemy/Buttercat/sprite/balloon.png" type="Texture" id=7]

[node name="ButterCat" type="Area2D" groups=["Bullet", "Enemy"]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 3 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="Balloon" type="Node2D" parent="."]
visible = false

[node name="Balloon2" type="Sprite" parent="Balloon"]
position = Vector2( -13, -82 )
rotation = -0.360484
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Balloon1" type="Sprite" parent="Balloon"]
position = Vector2( -27, -73 )
rotation = -0.852512
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Balloon3" type="Sprite" parent="Balloon"]
position = Vector2( 6, -82 )
rotation = 0.209241
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Balloon4" type="Sprite" parent="Balloon"]
position = Vector2( 16, -81 )
rotation = 0.517937
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )

[node name="Rocket" type="AnimatedSprite" parent="."]
position = Vector2( 0, -77 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 1 )
animation = "rocket"
frame = 1
playing = true

[node name="Fireworks" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -77 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 1 )
animation = "fireworks"
frame = 1
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -88, -34, -54, -46, -48, -52, -14, -52, 18, -56, 82, -46, 106, -16, 120, 6, 110, 40, 50, 54, -24, 68, -82, 64, -110, 32, -108, -2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cat" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 1 )
animation = "idle"
playing = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="." to="." method="_on_ButterCat_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
